Fix annoying wrapping in styling.

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,3 +1,4 @@
 .rst-content code.literal, .rst-content tt.literal {
     color: inherit;
+    white-space: nowrap;
 }
